--- a/spam.ipynb
+++ b/spam.ipynb
@@ -49,7 +49,7 @@
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.metrics import accuracy_score, confusion_matrix"
       ],
-      "execution_count": 40,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -79,7 +79,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4TFgfM3shebM",
-        "outputId": "9cd7d2d6-525b-412e-aae7-88b68c929407"
+        "outputId": "b6b6c7b9-e375-4836-e965-1abf2941b4e5"
       },
       "source": [
         "dados.shape"
@@ -108,7 +108,7 @@
           "height": 355
         },
         "id": "hNw7teP2jS_i",
-        "outputId": "85a0d35b-0ec3-48e9-8563-2fb1e7f671b2"
+        "outputId": "ab76f274-e919-475b-ef0a-2d91e140fbae"
       },
       "source": [
         "dados.head()"
@@ -682,7 +682,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G3zafwjUhwk5",
-        "outputId": "6f1f384c-6a1f-44da-b219-d5c020b7a151"
+        "outputId": "06d97af0-3b39-4ddb-859b-a577d127f560"
       },
       "source": [
         "vetor_nulos.loc[vetor_nulos.values > 0]"
@@ -710,7 +710,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zRNmBW7NgI-Q",
-        "outputId": "d396f5e0-cf98-478f-dd5c-95183fca88df"
+        "outputId": "d1b92514-58c0-415c-b6fc-98b2b6a39852"
       },
       "source": [
         "dados.info()"
@@ -738,7 +738,7 @@
           "height": 350
         },
         "id": "Mfy2bh1ritZg",
-        "outputId": "304a492d-2fae-4b3f-bf97-ee05ce3861d7"
+        "outputId": "431a98ee-b86b-44c4-9388-e900359acb7d"
       },
       "source": [
         "sns.countplot(dados['Prediction'])"
@@ -757,7 +757,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fb2c75cffd0>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fd49aeef950>"
             ]
           },
           "metadata": {
@@ -808,7 +808,7 @@
           "height": 253
         },
         "id": "M6ifSSjvl7r8",
-        "outputId": "096aba61-2e42-419e-e843-02d5525a577c"
+        "outputId": "a87f7d7b-2e3c-455c-8e5d-5777d7e05ce7"
       },
       "source": [
         "dados.head()"
@@ -1379,7 +1379,7 @@
         "id": "gekTkppguwO9"
       },
       "source": [
-        "dados.insert(3000, 'Total', dados.T.sum())"
+        "dados.insert(3000, 'Total', dados.sum(axis= 1))"
       ],
       "execution_count": 11,
       "outputs": []
@@ -1392,7 +1392,7 @@
           "height": 439
         },
         "id": "M4NUGZDCuyLY",
-        "outputId": "3a107bed-13ca-4c2a-d62c-3e83a0dc4a92"
+        "outputId": "54ce09da-bc26-4530-9fdf-52d34bea66ee"
       },
       "source": [
         "dados"
@@ -2465,14 +2465,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "41zhbT6rwvSS",
-        "outputId": "b04c87da-f0cd-4a9f-9dfd-e86f2dab47af"
+        "outputId": "c444f65b-a310-4fb1-945e-11aba61c3574"
       },
       "source": [
         "total_agrupado = dados['Total'].groupby(dados['Prediction']).mean()\n",
         "\n",
         "total_agrupado"
       ],
-      "execution_count": 36,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2487,7 +2487,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 13
         }
       ]
     },
@@ -2499,14 +2499,14 @@
           "height": 296
         },
         "id": "q5yE3cLwBtVH",
-        "outputId": "75a15b18-21e7-4160-e785-73b1b51a989d"
+        "outputId": "8c03884b-c613-47e3-8ab9-31949c4f12c8"
       },
       "source": [
         "sns.barplot(x= total_agrupado.index, y= total_agrupado.values)\n",
         "\n",
         "plt.ylabel('Media de total de palavras')"
       ],
-      "execution_count": 42,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2518,7 +2518,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 14
         },
         {
           "output_type": "display_data",
@@ -2574,7 +2574,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P4DnH_FgmPao",
-        "outputId": "6b5bb01d-c9d2-43e5-de07-071062407aa6"
+        "outputId": "65a02ded-8997-43b6-a3ea-3d6feb2d2c52"
       },
       "source": [
         "rfc = RandomForestClassifier()\n",
@@ -2622,7 +2622,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zth5qwygm-1c",
-        "outputId": "cad8bd44-166c-423b-e115-9cabb9f9a9e4"
+        "outputId": "1bb3de00-cf42-4b9a-f21f-79cad579e83a"
       },
       "source": [
         "accuracy_score(previsao, y_test)"
@@ -2633,7 +2633,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.9682907965970611"
+              "0.9679040989945862"
             ]
           },
           "metadata": {
@@ -2650,7 +2650,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W62pT8a2nP5t",
-        "outputId": "9f3b5fa8-f5b1-4104-bf10-188ff5cfea3a"
+        "outputId": "7391eba1-ebde-4562-8b6a-ae80cf5f5050"
       },
       "source": [
         "confusion_matrix(previsao, y_test)"
@@ -2661,8 +2661,8 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[1814,   60],\n",
-              "       [  22,  690]])"
+              "array([[1799,   46],\n",
+              "       [  37,  704]])"
             ]
           },
           "metadata": {
@@ -2679,7 +2679,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bdxMJAZWnUbE",
-        "outputId": "507f2173-58b9-49cd-e389-8adeffa08763"
+        "outputId": "bae6a404-d594-4ee0-96e1-0bd94dcd245f"
       },
       "source": [
         "3269 / (3269 + 333)"
@@ -2707,7 +2707,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UyWQqh9mn-xa",
-        "outputId": "463bf24f-0eb9-4f7d-9b22-508afee52484"
+        "outputId": "6ac20787-e88c-41ae-996d-b324c9d1a767"
       },
       "source": [
         "1017 / (1017 + 333)"
@@ -2744,7 +2744,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RpimLz0zozfS",
-        "outputId": "e6c14a77-4286-4c30-8ea1-d1c02cdb5ab7"
+        "outputId": "0214f53f-7afc-4920-b595-6f358498e64e"
       },
       "source": [
         "from imblearn.over_sampling import SMOTE"
@@ -2781,7 +2781,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GGuOWd8ipDpi",
-        "outputId": "e0a508d4-b29f-4307-bcc9-5159f9209b22"
+        "outputId": "ffc5c84a-7e76-4285-c108-f128b32601f6"
       },
       "source": [
         "X_over, y_over = smote.fit_sample(X, y)"
@@ -2816,7 +2816,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u0HiXLc-p0FJ",
-        "outputId": "f29984b9-5192-4a92-d662-beade6716d1e"
+        "outputId": "1b8908e1-c6ef-4a23-a3bc-59ce83a47ff1"
       },
       "source": [
         "rfc_over = RandomForestClassifier()\n",
@@ -2864,7 +2864,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iOk6NLEwqHzM",
-        "outputId": "ce92e2da-3767-4652-dea1-f8e69ebd4462"
+        "outputId": "6251d526-34a6-4a69-d9a8-1201cfd84805"
       },
       "source": [
         "accuracy_score(previsao_over, y_test_over)"
@@ -2875,7 +2875,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.9540090771558245"
+              "0.9518910741301059"
             ]
           },
           "metadata": {
@@ -2891,7 +2891,9 @@
         "id": "2124fif7qO-A"
       },
       "source": [
-        "cm = confusion_matrix(previsao_over, y_test_over)"
+        "cm = confusion_matrix(previsao_over, y_test_over)\n",
+        "\n",
+        "cm"
       ],
       "execution_count": 30,
       "outputs": []
@@ -2903,7 +2905,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CqTxRWSuqWBj",
-        "outputId": "8c7b5037-f945-4b78-cad9-e6b39fc9f7f6"
+        "outputId": "691dbd38-5549-449b-d7ea-55c0b4d64375"
       },
       "source": [
         "cm[0][0] / (cm[0][0] + cm[0][1])"
@@ -2914,7 +2916,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.9882850634559063"
+              "0.9960146130853537"
             ]
           },
           "metadata": {
@@ -2931,7 +2933,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oLS2t3W_qcYc",
-        "outputId": "dc1ddd8d-dbb5-4930-da7d-34ef345f431c"
+        "outputId": "be0ce9f3-7c85-4e43-b361-c1fbb92db6fb"
       },
       "source": [
         "cm[1][1] / (cm[1][1] + cm[1][0])"
@@ -2942,7 +2944,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.9242295730845349"
+              "0.9149763823284246"
             ]
           },
           "metadata": {
@@ -2951,48 +2953,6 @@
           "execution_count": 32
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "bUuT8-nbqg1z",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "240508f8-6e22-44e4-daf5-84fc640fb6cf"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 35,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Prediction\n",
-              "0    1045.391885\n",
-              "1    1459.798667\n",
-              "Name: Total, dtype: float64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 35
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "UnhzOg05BKp3"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
