--- a/spam.ipynb
+++ b/spam.ipynb
@@ -79,7 +79,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4TFgfM3shebM",
-        "outputId": "e6da83a6-0077-4765-ad05-b79cff55ae65"
+        "outputId": "cda80f01-d329-4a64-80d5-acea1b891d79"
       },
       "source": [
         "dados.shape"
@@ -108,7 +108,7 @@
           "height": 355
         },
         "id": "hNw7teP2jS_i",
-        "outputId": "72735dfe-df0c-4c18-e5c2-bbc94c1b925d"
+        "outputId": "2c397c4f-5ff0-42e5-bfd6-1d305ae1bec1"
       },
       "source": [
         "dados.head()"
@@ -682,7 +682,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G3zafwjUhwk5",
-        "outputId": "a81d5834-9bff-4f97-8d96-bdcfb1f5b99f"
+        "outputId": "de611d2a-208c-4afc-a1cf-523d4de6776a"
       },
       "source": [
         "vetor_nulos.loc[vetor_nulos.values > 0]"
@@ -710,7 +710,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zRNmBW7NgI-Q",
-        "outputId": "2942a9e6-dba7-4f52-96df-902d6423bc2c"
+        "outputId": "b54b30f9-aa29-41ad-eb2c-53416103dd03"
       },
       "source": [
         "dados.info()"
@@ -738,7 +738,7 @@
           "height": 350
         },
         "id": "Mfy2bh1ritZg",
-        "outputId": "30d7d59b-d494-4572-c4c9-826a2290a48a"
+        "outputId": "09f022de-761a-4f17-9b65-564f32a029b8"
       },
       "source": [
         "sns.countplot(dados['Prediction'])"
@@ -757,7 +757,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f001014b810>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fe752fc8a10>"
             ]
           },
           "metadata": {
@@ -808,7 +808,7 @@
           "height": 253
         },
         "id": "M6ifSSjvl7r8",
-        "outputId": "28f8748d-26da-42c6-e346-eda5edeffce1"
+        "outputId": "0ba19081-70ea-4bb2-cd20-1e18a59dcfa6"
       },
       "source": [
         "dados.head()"
@@ -1392,7 +1392,7 @@
           "height": 439
         },
         "id": "M4NUGZDCuyLY",
-        "outputId": "5c44b01a-b922-41de-b6cc-63f70010cfd4"
+        "outputId": "f6b22333-d4b3-4bc2-b7d2-b0039ede99a6"
       },
       "source": [
         "dados"
@@ -2465,7 +2465,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "41zhbT6rwvSS",
-        "outputId": "31d9dfdd-69ce-4bba-ae99-6acb31cbbf37"
+        "outputId": "62dc0ff0-6135-4529-db93-7d00fc4cb5c3"
       },
       "source": [
         "total_agrupado = dados['Total'].groupby(dados['Prediction']).mean()\n",
@@ -2499,7 +2499,7 @@
           "height": 296
         },
         "id": "q5yE3cLwBtVH",
-        "outputId": "b20b9637-e072-4f9b-b09c-60f93865f359"
+        "outputId": "c618c172-65e5-4f40-d8ff-0b336918a081"
       },
       "source": [
         "sns.barplot(x= total_agrupado.index, y= total_agrupado.values)\n",
@@ -2584,7 +2584,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X4FF0-PeB6Vm",
-        "outputId": "7f2dd075-b8b1-4424-dfa9-aaa5af0f069c"
+        "outputId": "19f64a9b-9cbc-439c-a23c-4b2f96e8f4e9"
       },
       "source": [
         "num_letras"
@@ -2622,7 +2622,7 @@
         "id": "nD2zQgJv-_7y"
       },
       "source": [
-        "palavras_maior = num_letras[num_letras >= 5]"
+        "palavras_maior = num_letras[num_letras >= 3]"
       ],
       "execution_count": 19,
       "outputs": []
@@ -2634,7 +2634,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LAsO88mY_l9M",
-        "outputId": "38eb033a-e932-4a7b-83c7-85875af38688"
+        "outputId": "929b0fd1-f99d-4c51-cfc0-ddfe3b9219a8"
       },
       "source": [
         "dados.iloc[:, palavras_maior.index].sum(axis= 1).values"
@@ -2645,7 +2645,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([  4, 154,   8, ...,   7,  35, 137])"
+              "array([  6, 421,  22, ...,  29, 116, 465])"
             ]
           },
           "metadata": {
@@ -2684,7 +2684,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y-ftLfl_Edou",
-        "outputId": "ad2817a1-1518-4ec8-f290-c2aa5e9b8cb8"
+        "outputId": "e1e767ba-ccd5-4d27-eb91-ace787b27490"
       },
       "source": [
         "num_palavras_agrupado.mean()"
@@ -2696,8 +2696,8 @@
           "data": {
             "text/plain": [
               "Prediction\n",
-              "0    59.891068\n",
-              "1    65.384000\n",
+              "0    173.16585\n",
+              "1    208.37200\n",
               "Name: Num de palavras >3, dtype: float64"
             ]
           },
@@ -2716,7 +2716,7 @@
           "height": 473
         },
         "id": "4SK_bmoTDZqk",
-        "outputId": "222c4570-efd3-4434-8cac-fc2f8d4227b4"
+        "outputId": "e32103a5-d963-4a0d-f509-40158e394fd9"
       },
       "source": [
         "dados"
@@ -2910,7 +2910,7 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>53</td>\n",
-              "      <td>4</td>\n",
+              "      <td>6</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -2994,7 +2994,7 @@
               "      <td>1</td>\n",
               "      <td>0</td>\n",
               "      <td>2203</td>\n",
-              "      <td>154</td>\n",
+              "      <td>421</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -3078,7 +3078,7 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>113</td>\n",
-              "      <td>8</td>\n",
+              "      <td>22</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -3162,7 +3162,7 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>1019</td>\n",
-              "      <td>62</td>\n",
+              "      <td>191</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -3246,7 +3246,7 @@
               "      <td>1</td>\n",
               "      <td>0</td>\n",
               "      <td>1075</td>\n",
-              "      <td>74</td>\n",
+              "      <td>193</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -3414,7 +3414,7 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>505</td>\n",
-              "      <td>39</td>\n",
+              "      <td>93</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -3498,7 +3498,7 @@
               "      <td>1</td>\n",
               "      <td>0</td>\n",
               "      <td>2939</td>\n",
-              "      <td>153</td>\n",
+              "      <td>496</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -3582,7 +3582,7 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>179</td>\n",
-              "      <td>7</td>\n",
+              "      <td>29</td>\n",
               "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -3666,7 +3666,7 @@
               "      <td>1</td>\n",
               "      <td>0</td>\n",
               "      <td>788</td>\n",
-              "      <td>35</td>\n",
+              "      <td>116</td>\n",
               "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -3750,7 +3750,7 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>2717</td>\n",
-              "      <td>137</td>\n",
+              "      <td>465</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -3760,17 +3760,17 @@
             ],
             "text/plain": [
               "      the  to  ect  and  for  ...  ff  dry  Total  Num de palavras >3  Prediction\n",
-              "0       0   0    1    0    0  ...   0    0     53                   4           0\n",
-              "1       8  13   24    6    6  ...   1    0   2203                 154           0\n",
-              "2       0   0    1    0    0  ...   0    0    113                   8           0\n",
-              "3       0   5   22    0    5  ...   0    0   1019                  62           0\n",
-              "4       7   6   17    1    5  ...   1    0   1075                  74           0\n",
+              "0       0   0    1    0    0  ...   0    0     53                   6           0\n",
+              "1       8  13   24    6    6  ...   1    0   2203                 421           0\n",
+              "2       0   0    1    0    0  ...   0    0    113                  22           0\n",
+              "3       0   5   22    0    5  ...   0    0   1019                 191           0\n",
+              "4       7   6   17    1    5  ...   1    0   1075                 193           0\n",
               "...   ...  ..  ...  ...  ...  ...  ..  ...    ...                 ...         ...\n",
-              "5167    2   2    2    3    0  ...   0    0    505                  39           0\n",
-              "5168   35  27   11    2    6  ...   1    0   2939                 153           0\n",
-              "5169    0   0    1    1    0  ...   0    0    179                   7           1\n",
-              "5170    2   7    1    0    2  ...   1    0    788                  35           1\n",
-              "5171   22  24    5    1    6  ...   0    0   2717                 137           0\n",
+              "5167    2   2    2    3    0  ...   0    0    505                  93           0\n",
+              "5168   35  27   11    2    6  ...   1    0   2939                 496           0\n",
+              "5169    0   0    1    1    0  ...   0    0    179                  29           1\n",
+              "5170    2   7    1    0    2  ...   1    0    788                 116           1\n",
+              "5171   22  24    5    1    6  ...   0    0   2717                 465           0\n",
               "\n",
               "[5172 rows x 3003 columns]"
             ]
@@ -3821,7 +3821,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P4DnH_FgmPao",
-        "outputId": "0f5adff2-1bb1-45be-f287-9a0db8f35dd8"
+        "outputId": "599abb5b-4460-45e1-b33c-e561491bc35f"
       },
       "source": [
         "rfc = RandomForestClassifier()\n",
@@ -3869,7 +3869,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zth5qwygm-1c",
-        "outputId": "e929d418-753f-4206-f2c9-374357decd33"
+        "outputId": "54725741-6ca3-445f-fc57-be6dd25d8b25"
       },
       "source": [
         "accuracy_score(previsao, y_test)"
@@ -3880,7 +3880,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.97138437741686"
+              "0.9663573085846868"
             ]
           },
           "metadata": {
@@ -3893,31 +3893,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "W62pT8a2nP5t",
-        "outputId": "caf151f5-122d-446f-c82e-5e3337ac1876"
+        "id": "W62pT8a2nP5t"
       },
       "source": [
-        "confusion_matrix(previsao, y_test)"
+        "cm = confusion_matrix(previsao, y_test)"
       ],
       "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[1804,   42],\n",
-              "       [  32,  708]])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 30
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -3926,10 +3908,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bdxMJAZWnUbE",
-        "outputId": "993c341b-64b4-4a23-d7d1-4b48fbd95720"
+        "outputId": "db85efb8-f284-48be-c836-7de179fa8387"
       },
       "source": [
-        "3269 / (3269 + 333)"
+        "cm[0][0] / (cm[0][0] + cm[0][1])"
       ],
       "execution_count": 31,
       "outputs": [
@@ -3937,7 +3919,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.9075513603553581"
+              "0.9760479041916168"
             ]
           },
           "metadata": {
@@ -3954,10 +3936,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UyWQqh9mn-xa",
-        "outputId": "e9a7028d-33fc-46ed-94fa-862b49e39a88"
+        "outputId": "108da2dd-4910-4434-e152-33837eba4fda"
       },
       "source": [
-        "1017 / (1017 + 333)"
+        "cm[1][1] / (cm[1][1] + cm[1][0])"
       ],
       "execution_count": 32,
       "outputs": [
@@ -3965,7 +3947,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.7533333333333333"
+              "0.9425901201602136"
             ]
           },
           "metadata": {
@@ -3991,7 +3973,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RpimLz0zozfS",
-        "outputId": "4608e340-4536-4ed9-f119-25f5d68fccd9"
+        "outputId": "737de0ee-41e0-42ac-afc2-0765132443b8"
       },
       "source": [
         "from imblearn.over_sampling import SMOTE"
@@ -4028,7 +4010,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GGuOWd8ipDpi",
-        "outputId": "53db3b3d-92b9-4ece-96d0-ebb1fe49b729"
+        "outputId": "99229c83-8ca1-4a92-831b-7ecd9d4ae9fb"
       },
       "source": [
         "X_over, y_over = smote.fit_sample(X, y)"
@@ -4063,7 +4045,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u0HiXLc-p0FJ",
-        "outputId": "1b108158-78f2-4cd2-dcff-42a5fff35435"
+        "outputId": "a2cbb5b5-830e-4a38-8825-f875d106eebe"
       },
       "source": [
         "rfc_over = RandomForestClassifier()\n",
@@ -4111,7 +4093,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iOk6NLEwqHzM",
-        "outputId": "12d2de37-34f2-4338-8fc0-e83fbea6a8c1"
+        "outputId": "d464f04d-2ff2-4fa5-8b2a-79faa2a0dd29"
       },
       "source": [
         "accuracy_score(previsao_over, y_test_over)"
@@ -4122,7 +4104,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.956732223903177"
+              "0.9431164901664145"
             ]
           },
           "metadata": {
@@ -4139,12 +4121,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "aa885fc1-5a26-4927-ae2f-b6ea1aa07c18"
+        "outputId": "ad91def8-a461-4256-d9a0-a51eb63f4ed5"
       },
       "source": [
-        "cm = confusion_matrix(previsao_over, y_test_over)\n",
+        "cm_over = confusion_matrix(previsao_over, y_test_over)\n",
         "\n",
-        "cm"
+        "cm_over"
       ],
       "execution_count": 40,
       "outputs": [
@@ -4152,8 +4134,8 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[3040,   21],\n",
-              "       [ 265, 3284]])"
+              "array([[2976,   47],\n",
+              "       [ 329, 3258]])"
             ]
           },
           "metadata": {
@@ -4170,10 +4152,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CqTxRWSuqWBj",
-        "outputId": "af493f84-84f6-4d09-9fa8-af0551ac130a"
+        "outputId": "985f94a3-09ce-4aa4-ed5a-01b1a09e5e54"
       },
       "source": [
-        "cm[0][0] / (cm[0][0] + cm[0][1])"
+        "cm_over[0][0] / (cm_over[0][0] + cm_over[0][1])"
       ],
       "execution_count": 41,
       "outputs": [
@@ -4181,7 +4163,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.9931394968964391"
+              "0.9844525305987429"
             ]
           },
           "metadata": {
@@ -4198,10 +4180,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oLS2t3W_qcYc",
-        "outputId": "01c6377c-d1c8-4181-a4f4-da76b55edb64"
+        "outputId": "f1828819-1cb5-4f3d-9eb7-7d55839fc050"
       },
       "source": [
-        "cm[1][1] / (cm[1][1] + cm[1][0])"
+        "cm_over[1][1] / (cm_over[1][1] + cm_over[1][0])"
       ],
       "execution_count": 42,
       "outputs": [
@@ -4209,7 +4191,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.925331079177233"
+              "0.9082798996375802"
             ]
           },
           "metadata": {
